@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 10-02-2006 fixed: potential bug in sharedsection handling
  - 10-02-2006 fixed: music nav, the error message for a empty database was not shown
  - 10-02-2006 fixed: setting the startup window to music or video starts xmbc in the correct window
  - 09-02-2006 added: display a/v sync in codecinfo during playback in dvdplayer + some new code to prepare for a new syncing system.
